tests/compiler/errors/04-function-not-found.jsa
// jastat-summary: Error on calling undefined function
// jastat: mode=compiler, capture=stderr

import io from @io;

nonexistent_function(42);  // T301: Undefined variable (function)
